# CaseFlow

./: .gitignore  CLAUDE.md  README.md  index (1).html  package.json
agent-py/: .env.example  CLAUDE.md  Dockerfile  knowledge.json  livekit.toml  pyproject.toml  virtual-model-fallback.yaml
agent-py/scripts/: seed_demo_documents.py
agent-py/src/: adaptive_retrieval.py  agent.py  aws_s3.py  bedrock_llm.py  case_broadcast.py  case_completeness.py  case_persistence.py  case_tools.py  caseflow_userdata.py  citations.py  comprehend_medical.py  consistency.py  create_index.py  doc_intent.py  doc_thumbnail.py  document_auditor.py  document_generator.py  feedback_store.py  firm_agent.py  gateway.py  geo.py  llm_client.py  metrics.py  minimax_voice.py  openai_llm.py  orchestrator.py  pdf_render.py  pii_redaction.py  post_call.py  privacy_context.py  privacy_ops.py  pronunciation.py  redacting_llm.py  retrieval.py  slot_extraction.py  sol_lookup.py  supabase_store.py  synthesizer.py  validator.py  video_capture.py
agent-py/tests/: test_adaptive.py  test_agent.py  test_agent_tools.py  test_aws_s3.py  test_bedrock_llm.py  test_case_completeness.py  test_citations.py  test_comprehend_medical.py  test_consistency.py  test_document_seam.py  test_feedback.py  test_firm_leads.py  test_gateway.py  test_geo.py  test_integration.py  test_llm_client.py  test_minimax_voice.py  test_moss.py  test_pii_redaction.py  test_post_call.py  test_slot_extraction.py  test_synthesizer.py
agent-py/truefoundry/: README.md  guardrails.yaml  virtual-model-dialogue.yaml  virtual-model-reasoning.yaml
(+211 files in other folders)
