[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "caseflow-agent"
version = "1.0.0"
description = "Caseflow multilingual PI video intake agent (LiveKit + Moss)"
requires-python = ">=3.10, <3.15"

dependencies = [
    "livekit-agents[silero,turn-detector]==1.5.18",
    "livekit-plugins-ai-coustics~=0.2",
    "python-dotenv",
    "moss>=1.4",
    "httpx>=0.28",
    "livekit-plugins-minimax-ai>=1.5.18",
    "boto3>=1.35",
    "markdown>=3.7",
    "weasyprint>=63.0",
    "livekit-plugins-deepgram>=1.5.18,<1.6",
    "livekit-plugins-anthropic>=1.5.18",
]

[dependency-groups]
dev = [
    "pytest",
    "pytest-asyncio",
    "ruff",
]

[tool.uv]
# yarl 1.24.1 was published with only a cp310 wheel and no sdist, so it can't
# install on Python 3.11+. Remove this once upstream uploads the remaining wheels.
constraint-dependencies = ["yarl<1.24"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[tool.ruff]
line-length = 88
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "B", "A", "C4", "UP", "SIM", "RUF"]
ignore = ["E501"]  # Line too long (handled by formatter)

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
